--- a/index.html
+++ b/index.html
@@ -1,72 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mobile First</title>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Mobile First</title>
 
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap" rel="stylesheet">
+        <link
+            href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap"
+            rel="stylesheet"
+        />
 
-    <!-- Styles -->
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <img src="Assets/img/logo.svg" alt="">
-        <div class="header--tittle-container">
-            <h1>The next revolution in cryptocurrency exchange</h1>
-            <p>
-                Betabit helps you navigate between different prices and trends
-            </p>
-            <a class="header--button" href="">Know our plans <span></span></a>
-        </div>
-    </header>
-
-    <main>
-        <section class="main-exchange-container">
-            <div class="backgroundImg"></div>
-            <div class="main-exchange-container-title">
-                <h2>We make all exchange sizes visible</h2>
+        <!-- Styles -->
+        <link rel="stylesheet" href="styles.css" />
+    </head>
+    <body>
+        <header>
+            <img src="Assets/img/logo.svg" alt="" />
+            <div class="header--tittle-container">
+                <h1>The next revolution in cryptocurrency exchange</h1>
                 <p>
-                    We bring real-time information on exchange rates and the most important currencies in the world
+                    Betabit helps you navigate between different prices and
+                    trends
                 </p>
+                <a class="header--button" href=""
+                    >Know our plans <span></span
+                ></a>
             </div>
-            <section class="main-tables-container">
-                <div class="main-currency-table">
-                    <p class="currency-table--title">Monedas</p>
-                    <div class="currency-table--container">
-                        <table>
-                            <tr>
-                                <td class="table__top-left">Bitcoin</td>
-                                <td class="table__top-right table-right">$1.96 <span></span></td>
-                            </tr>
-                            <tr>
-                                <td>Ethereum</td>
-                                <td class="table__right">$0.07</td>
-                            </tr>
-                            <tr>
-                                <td>Ripple</td>
-                                <td class="table__right">$2.15</td>
-                            </tr>
-                            <tr>
-                                <td class="table__buttom-left">Stellar</td>
-                                <td class="table__bottom-right table__right">$4.96</td>
-                            </tr>
-                        </table>
-                    </div>
-                    <div class="currency-table--date">
-                        <p><b>Actualizado:</b> 19 de julio 23:45</p>
-                    </div>
-                </div>
-            </section>
-        </section>
-        <section></section>
-        <section></section>
-        <section></section>
-    </main>
+        </header>
 
-    <footer></footer>
-    <footer></footer>
-    
-</body>
+        <main>
+            <section class="main-exchange-container">
+                <div class="backgroundImg"></div>
+                <div class="main-exchange-container-title">
+                    <h2>We make all exchange sizes visible</h2>
+                    <p>
+                        We bring real-time information on exchange rates and the
+                        most important currencies in the world
+                    </p>
+                </div>
+                <section class="main-tables-container">
+                    <div class="main-currency-table">
+                        <p class="currency-table--title">Monedas</p>
+                        <div class="currency-table--container">
+                            <table>
+                                <tr>
+                                    <td class="table__top-left">Bitcoin</td>
+                                    <td class="table__top-right table-right">
+                                        $1.96 <span></span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Ethereum</td>
+                                    <td class="table__right">$0.07</td>
+                                </tr>
+                                <tr>
+                                    <td>Ripple</td>
+                                    <td class="table__right">$2.15</td>
+                                </tr>
+                                <tr>
+                                    <td class="table__buttom-left">Stellar</td>
+                                    <td
+                                        class="table__bottom-right table__right"
+                                    >
+                                        $4.96
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div class="currency-table--date">
+                            <p><b>Actualizado:</b> 19 de julio 23:45</p>
+                        </div>
+                    </div>
+                </section>
+            </section>
+            <section></section>
+            <section></section>
+            <section></section>
+        </main>
+
+        <footer></footer>
+        <footer></footer>
+    </body>
 </html>
