--- a/Copia/index.html
+++ b/Copia/index.html
@@ -29,6 +29,7 @@
         </header>
 
         <main>
+            <!-- First Section -->
             <section class="main-exchange-container">
                 <div class="backgroundImg"></div>
                 <div class="main-exchange-container-title">
@@ -87,7 +88,25 @@
                     </div>
                 </section>
             </section>
-            <section></section>
+            <!-- Second Section -->
+            <section class="main-product-detail">
+                <span class="product-detail-batata-logo"></span>
+                <div class="product-detail--title">
+                    <h2>We create a product without comparison</h2>
+                    <p>Reliable and designed for daily use</p>
+                </div>
+
+                <section class="product-cards--container">
+                    <article class="product-detail--card">
+                        <span class="clock"></span>
+                        <p class="product-card-title">Real Time</p>
+                        <p class="product-card-body">
+                            Hi i'm test text to practice my English and sorry
+                            for the my mistakes
+                        </p>
+                    </article>
+                </section>
+            </section>
             <section></section>
             <section></section>
         </main>
