--- a/Copia/index.html
+++ b/Copia/index.html
@@ -98,7 +98,23 @@
 
                 <section class="product-cards--container">
                     <article class="product-detail--card">
-                        <span class="clock"></span>
+                        <span class="icon-card clock"></span>
+                        <p class="product-card-title">Real Time</p>
+                        <p class="product-card-body">
+                            Hi i'm test text to practice my English and sorry
+                            for the my mistakes
+                        </p>
+                    </article>
+                    <article class="product-detail--card">
+                        <span class="icon-card eye"></span>
+                        <p class="product-card-title">Real Time</p>
+                        <p class="product-card-body">
+                            Hi i'm test text to practice my English and sorry
+                            for the my mistakes
+                        </p>
+                    </article>
+                    <article class="product-detail--card">
+                        <span class="icon-card cash"></span>
                         <p class="product-card-title">Real Time</p>
                         <p class="product-card-body">
                             Hi i'm test text to practice my English and sorry
