--- a/Copia/index.html
+++ b/Copia/index.html
@@ -107,7 +107,9 @@
                     </article>
                     <article class="product-detail--card">
                         <span class="icon-card eye"></span>
-                        <p class="product-card-title">Real Time</p>
+                        <p class="product-card-title">
+                            There are no hidden fees
+                        </p>
                         <p class="product-card-body">
                             Hi i'm test text to practice my English and sorry
                             for the my mistakes
@@ -115,16 +117,46 @@
                     </article>
                     <article class="product-detail--card">
                         <span class="icon-card cash"></span>
-                        <p class="product-card-title">Real Time</p>
+                        <p class="product-card-title">Compare Coins</p>
                         <p class="product-card-body">
                             Hi i'm test text to practice my English and sorry
                             for the my mistakes
                         </p>
                     </article>
+                    <article class="product-detail--card">
+                        <span class="icon-card check"></span>
+                        <p class="product-card-title">Reliable Information</p>
+                        <p class="product-card-body">
+                            Hi i'm test text to practice my English and sorry
+                            for the my mistakesHi i'm test text to practice my
+                            English and sorry for the my mistakes
+                        </p>
+                    </article>
                 </section>
             </section>
-            <section></section>
-            <section></section>
+            <!-- Third Section -->
+            <section class="bitcoin-img-container">
+                <h2>Know now</h2>
+            </section>
+            <!-- Fourth Section -->
+            <section id="plans" class="main-plans-container">
+                <div class="plans-title">
+                    <h2>Choose the plan that best suits you</h2>
+                    <p>Any plan gives you access to our platform</p>
+                </div>
+
+                <section>
+                    <article>
+                        <p>Recommended</p>
+                        <div>
+                            <h3>Annual Payment</h3>
+                            <p><sup>$</sup>99</p>
+                            <p>* You save 129 compared to the monthly pla</p>
+                            <button>Choose this</button>
+                        </div>
+                    </article>
+                </section>
+            </section>
         </main>
 
         <footer></footer>
