Cards plans section

--- a/Copia/index.html
+++ b/Copia/index.html
@@ -22,7 +22,7 @@
                     Betabit helps you navigate between different prices and
                     trends
                 </p>
-                <a class="header--button" href=""
+                <a class="header--button" href="#plans"
                     >Know our plans <span></span
                 ></a>
             </div>
@@ -144,15 +144,18 @@
                     <h2>Choose the plan that best suits you</h2>
                     <p>Any plan gives you access to our platform</p>
                 </div>
-
-                <section>
-                    <article>
-                        <p>Recommended</p>
-                        <div>
-                            <h3>Annual Payment</h3>
-                            <p><sup>$</sup>99</p>
-                            <p>* You save 129 compared to the monthly pla</p>
-                            <button>Choose this</button>
+                <section class="plans-container-slider">
+                    <article class="plans-container-card">
+                        <p class="Recommended">Recommended</p>
+                        <div class="plan-card-body">
+                            <h3 class="plan-card-title">Annual Payment</h3>
+                            <p class="plan-card-price"><sup>$</sup>99</p>
+                            <p class="plan-card-saving">
+                                * You save 129 compared to the monthly pla
+                            </p>
+                            <button class="plan-card-action">
+                                Choose this <span></span>
+                            </button>
                         </div>
                     </article>
                 </section>
