--- a/Copia/index.html
+++ b/Copia/index.html
@@ -146,6 +146,18 @@
                 </div>
                 <section class="plans-container-slider">
                     <article class="plans-container-card">
+                        <div class="plan-card-body">
+                            <h3 class="plan-card-title">Monthly Payment</h3>
+                            <p class="plan-card-price"><sup>$</sup>228</p>
+                            <p class="plan-card-saving">
+                                * You save 129 compared to the monthly pla
+                            </p>
+                            <button class="plan-card-action">
+                                Choose this <span></span>
+                            </button>
+                        </div>
+                    </article>
+                    <article class="plans-container-card">
                         <p class="Recommended">Recommended</p>
                         <div class="plan-card-body">
                             <h3 class="plan-card-title">Annual Payment</h3>
@@ -158,11 +170,21 @@
                             </button>
                         </div>
                     </article>
+                    <article class="plans-container-card">
+                        <div class="plan-card-body">
+                            <h3 class="plan-card-title">Weekly Payment</h3>
+                            <p class="plan-card-price"><sup>$</sup>55</p>
+                            <p class="plan-card-saving">
+                                * You save 129 compared to the monthly pla
+                            </p>
+                            <button class="plan-card-action">
+                                Choose this <span></span>
+                            </button>
+                        </div>
+                    </article>
                 </section>
             </section>
         </main>
-
-        <footer></footer>
-        <footer></footer>
+        <footer>hola</footer>
     </body>
 </html>
