--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
                     Betabit helps you navigate between different prices and
                     trends
                 </p>
-                <a class="header--button" href=""
+                <a class="header--button" href="#plans"
                     >Know our plans <span></span
                 ></a>
             </div>
         </header>
 
         <main>
+            <!-- First Section -->
             <section class="main-exchange-container">
                 <div class="backgroundImg"></div>
                 <div class="main-exchange-container-title">
@@ -39,46 +40,151 @@
                     </p>
                 </div>
                 <section class="main-tables-container">
+                    <!-- First Table -->
                     <div class="main-currency-table">
-                        <p class="currency-table--title">Monedas</p>
-                        <div class="currency-table--container">
-                            <table>
-                                <tr>
-                                    <td class="table__top-left">Bitcoin</td>
-                                    <td class="table__top-right table-right">
-                                        $1.96 <span></span>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>Ethereum</td>
-                                    <td class="table__right">$0.07</td>
-                                </tr>
-                                <tr>
-                                    <td>Ripple</td>
-                                    <td class="table__right">$2.15</td>
-                                </tr>
-                                <tr>
-                                    <td class="table__buttom-left">Stellar</td>
-                                    <td
-                                        class="table__bottom-right table__right"
-                                    >
-                                        $4.96
-                                    </td>
-                                </tr>
-                            </table>
-                        </div>
+                        <p class="currency-table--title">Coins</p>
+                        <ul class="currency-table--container">
+                            <li class="table-top-left">Bitcoin</li>
+                            <li class="table-top-right table__item-right">
+                                $1.96 <span class="down"></span>
+                            </li>
+                            <li>Ethereum</li>
+                            <li class="table__item-right">
+                                $0.07 <span class="up"></span>
+                            </li>
+                            <li>Ripple</li>
+                            <li class="table__item-right">
+                                $2.15 <span class="down"></span>
+                            </li>
+                            <li class="table-bottom-left">Stellar</li>
+                            <li class="table-bottom-right table__item-right">
+                                $4.96 <span class="down"></span>
+                            </li>
+                        </ul>
                         <div class="currency-table--date">
-                            <p><b>Actualizado:</b> 19 de julio 23:45</p>
+                            <p><b>Updated:</b> 19 de julio 23:45</p>
+                        </div>
+                    </div>
+                    <!-- Second Table -->
+                    <div class="main-Commissions-table">
+                        <p class="currency-table--title">Commissions</p>
+                        <ul class="currency-table--container">
+                            <li class="table-top-left">Bitrade</li>
+                            <li class="table-top-right table__item-right">
+                                $12.96
+                            </li>
+                            <li>Bitpreco</li>
+                            <li class="table__item-right">$13.07</li>
+                            <li>Novadax</li>
+                            <li class="table__item-right">$13.15</li>
+                            <li class="table-bottom-left">Coinext</li>
+                            <li class="table-bottom-right table__item-right">
+                                $14.96
+                            </li>
+                        </ul>
+                        <div class="commissions-table--date">
+                            <p><b>Updated:</b> 19 de julio 23:45</p>
                         </div>
                     </div>
                 </section>
             </section>
-            <section></section>
-            <section></section>
-            <section></section>
-        </main>
+            <!-- Second Section -->
+            <section class="main-product-detail">
+                <span class="product-detail-batata-logo"></span>
+                <div class="product-detail--title">
+                    <h2>We create a product without comparison</h2>
+                    <p>Reliable and designed for daily use</p>
+                </div>
 
-        <footer></footer>
-        <footer></footer>
+                <section class="product-cards--container">
+                    <article class="product-detail--card">
+                        <span class="icon-card clock"></span>
+                        <p class="product-card-title">Real Time</p>
+                        <p class="product-card-body">
+                            Hi i'm test text to practice my English and sorry
+                            for the my mistakes
+                        </p>
+                    </article>
+                    <article class="product-detail--card">
+                        <span class="icon-card eye"></span>
+                        <p class="product-card-title">
+                            There are no hidden fees
+                        </p>
+                        <p class="product-card-body">
+                            Hi i'm test text to practice my English and sorry
+                            for the my mistakes
+                        </p>
+                    </article>
+                    <article class="product-detail--card">
+                        <span class="icon-card cash"></span>
+                        <p class="product-card-title">Compare Coins</p>
+                        <p class="product-card-body">
+                            Hi i'm test text to practice my English and sorry
+                            for the my mistakes
+                        </p>
+                    </article>
+                    <article class="product-detail--card">
+                        <span class="icon-card check"></span>
+                        <p class="product-card-title">Reliable Information</p>
+                        <p class="product-card-body">
+                            Hi i'm test text to practice my English and sorry
+                            for the my mistakesHi i'm test text to practice my
+                            English and sorry for the my mistakes
+                        </p>
+                    </article>
+                </section>
+            </section>
+            <!-- Third Section -->
+            <section class="bitcoin-img-container">
+                <h2>Know now</h2>
+            </section>
+            <!-- Fourth Section -->
+            <section id="plans" class="main-plans-container">
+                <div class="plans-title">
+                    <h2>Choose the plan that best suits you</h2>
+                    <p>Any plan gives you access to our platform</p>
+                </div>
+                <section class="plans-container-slider">
+                    <article class="plans-container-card">
+                        <div class="plan-card-body">
+                            <h3 class="plan-card-title">Monthly Payment</h3>
+                            <p class="plan-card-price"><sup>$</sup>228</p>
+                            <p class="plan-card-saving">
+                                * You save 129 compared to the monthly pla
+                            </p>
+                            <button class="plan-card-action">
+                                Choose this <span></span>
+                            </button>
+                        </div>
+                    </article>
+                    <article class="plans-container-card">
+                        <p class="Recommended">Recommended</p>
+                        <div class="plan-card-body">
+                            <h3 class="plan-card-title">Annual Payment</h3>
+                            <p class="plan-card-price"><sup>$</sup>99</p>
+                            <p class="plan-card-saving">
+                                * You save 129 compared to the monthly pla
+                            </p>
+                            <button class="plan-card-action">
+                                Choose this <span></span>
+                            </button>
+                        </div>
+                    </article>
+                    <article class="plans-container-card">
+                        <div class="plan-card-body">
+                            <h3 class="plan-card-title">Weekly Payment</h3>
+                            <p class="plan-card-price"><sup>$</sup>55</p>
+                            <p class="plan-card-saving">
+                                * You save 129 compared to the monthly pla
+                            </p>
+                            <button class="plan-card-action">
+                                Choose this <span></span>
+                            </button>
+                        </div>
+                    </article>
+                </section>
+            </section>
+        </main>
+        <footer>hola</footer>
     </body>
 </html>
