--- a/index.html
+++ b/index.html
@@ -185,6 +185,17 @@
                 </section>
             </section>
         </main>
-        <footer>hola</footer>
+        <footer>
+            <section class="left">
+                <ul>
+                    <li><a href="#">Linkedin</a></li>
+                    <li><a href="#">Crunchbase</a></li>
+                    <li><a href="#">Hackernews</a></li>
+                </ul>
+            </section>
+            <section>
+                <img src="Assets/img/logo-footer.svg" alt="Logo Batatabit" />
+            </section>
+        </footer>
     </body>
 </html>
