--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 
         <!-- Styles -->
         <link rel="stylesheet" href="styles.css" />
+        <link
+            rel="stylesheet"
+            href="CSS/tablet.css"
+            media="(min-width: 620px)"
+        />
     </head>
     <body>
         <header>
@@ -198,4 +203,5 @@
             </section>
         </footer>
     </body>
+    <script src="app.js"></script>
 </html>
